--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,20 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "name": "GDB Stlink v2",
+            "type": "cortex-debug",
+            "request": "launch",
+            "cwd": "${workspaceRoot}",
+            "servertype": "openocd",
+            "configFiles": [
+                "interface/stlink-v2.cfg",
+                "target/stm32f4x.cfg"
+            ],
+            "executable": "${workspaceFolder}/${relativeFileDirname}/main.elf",
+            "runToMain": true,
+            "svdFile": ".vscode/STM32F40x.svd"
+        },
         {
             "name": "GDB Stlink v2.1",
             "type": "cortex-debug",
@@ -15,7 +28,7 @@
                 "interface/stlink-v2-1.cfg",
                 "target/stm32f4x.cfg"
             ],
-            "executable": "src/main.elf",
+            "executable": "${workspaceFolder}/${relativeFileDirname}/main.elf",
             "runToMain": true,
             "svdFile": ".vscode/STM32F40x.svd"
         },
@@ -26,10 +39,9 @@
             "cwd": "${workspaceRoot}",
             "servertype": "bmp",
             "BMPGDBSerialPort": "/dev/ttyACM0",
-            "executable": "src/main.elf",
+            "executable": "${workspaceFolder}/${relativeFileDirname}/main.elf",
             "runToMain": true,
             "svdFile": ".vscode/STM32F40x.svd"
         }
-
     ]
 }
